feat(audit): add plan for 12 new architecture metrics (propagation cost, relative cyclicity, adapter   independence, VO ratio, etc.)